Added Class files
Tunnel.h : Generates the tunnel scene (currently random pods for each
segment)
Player.h : Contains controls
Pod.h : Stuff that hang off the wall of tunnels
Vine.h : Player character (Really nothing right now)
Direction.h : Enum for direction

--- a/Vinezors/Windows/Vinezors.vcxproj
+++ b/Vinezors/Windows/Vinezors.vcxproj
@@ -78,10 +78,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Direction.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Pod.cpp" />
+    <ClCompile Include="Tunnel.cpp" />
+    <ClCompile Include="Vine.cpp" />
     <ClCompile Include="Vinezors.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Direction.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Pod.h" />
+    <ClInclude Include="Tunnel.h" />
+    <ClInclude Include="Vine.h" />
     <ClInclude Include="Vinezors.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
