--- a/Popzors2.0/Popzors2.0/resources.cfg
+++ b/Popzors2.0/Popzors2.0/resources.cfg
@@ -5,6 +5,7 @@ Zip=media/packs/SdkTrays.zip
 
 # Resource locations to be added to the default path
 [General]
+FileSystem=media/sounds
 FileSystem=media/models
 FileSystem=media/materials/scripts
 FileSystem=media/materials/textures
