--- a/Vinezors2.0/Vinezors2.0/resources.cfg
+++ b/Vinezors2.0/Vinezors2.0/resources.cfg
@@ -20,6 +20,7 @@ FileSystem=media/materials/textures/Level4
 FileSystem=media/materials/textures/Level5
 FileSystem=media/materials/textures/Level6
 FileSystem=media/materials/textures/Level7
+FileSystem=media/materials/textures/LevelBinding
 FileSystem=media/fonts
 FileSystem=media/sounds
 Zip=media/packs/cubemapsJS.zip
