--- a/VinezorsiOS/VinezorsiOS/resources.cfg
+++ b/VinezorsiOS/VinezorsiOS/resources.cfg
@@ -7,10 +7,23 @@ Zip=media/packs/SdkTrays.zip
 [General]
 FileSystem=media/models
 FileSystem=media/materials/scripts
+FileSystem=media/materials/scripts/Barriers
+FileSystem=media/materials/scripts/Flowers
+FileSystem=media/materials/scripts/FuelCell
+FileSystem=media/materials/scripts/PlantProps
+FileSystem=media/materials/scripts/Ships
 FileSystem=media/materials/textures
-FileSystem=media/fonts
-FileSystem=media/sounds
+FileSystem=media/materials/textures/Level1
+FileSystem=media/materials/textures/Level2
+FileSystem=media/materials/textures/Level3
+FileSystem=media/materials/textures/Level4
+FileSystem=media/materials/textures/Level5
+FileSystem=media/materials/textures/Level6
+FileSystem=media/materials/textures/Level7
+FileSystem=media/materials/textures/LevelBinding
 FileSystem=media/RTShaderLib
 FileSystem=media/RTShaderLib/materials
+FileSystem=media/fonts
+FileSystem=media/sounds
 Zip=media/packs/cubemapsJS.zip
 Zip=media/packs/skybox.zip
