--- a/Ogre3DSeparateBuildSenior/VinezorsiOS/VinezorsiOS/VinezorsiOS-Info.plist
+++ b/Ogre3DSeparateBuildSenior/VinezorsiOS/VinezorsiOS/VinezorsiOS-Info.plist
@@ -33,6 +33,11 @@
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
-	<array/>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+	</array>
 </dict>
 </plist>
