--- a/Ogre3DSeparateBuildSpace/Vinezors2.0/Vinezors2.0/resources.cfg
+++ b/Ogre3DSeparateBuildSpace/Vinezors2.0/Vinezors2.0/resources.cfg
@@ -13,6 +13,7 @@ FileSystem=media/materials/scripts/FuelCell
 FileSystem=media/materials/scripts/PlantProps
 FileSystem=media/materials/scripts/Ships
 FileSystem=media/materials/scripts/Powerups
+FileSystem=media/materials/scripts/ExitGate
 FileSystem=media/materials/textures
 FileSystem=media/materials/textures/LevelBinding
 FileSystem=media/materials/textures/MenuButtons
