--- a/Ogre3DSeparateBuildSpace/VinezorsiOS/VinezorsiOS/resources.cfg
+++ b/Ogre3DSeparateBuildSpace/VinezorsiOS/VinezorsiOS/resources.cfg
@@ -17,6 +17,7 @@ FileSystem=media/materials/scripts/ExitGate
 FileSystem=media/materials/textures
 FileSystem=media/materials/textures/LevelBinding
 FileSystem=media/materials/textures/MenuButtons
+FileSystem=media/materials/textures/MenuButtons/LevelSelect
 FileSystem=media/materials/textures/TextDisplay
 FileSystem=media/materials/textures/CollectionCriteria
 FileSystem=media/materials/textures/Powerups
