Preliminary Push for houldout changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .DS_Store
 project.xcworkspace
 yuki.xcuserdatad
+Ogre3DSeparateBuildSpace/Vinezors2.0/Vinezors2.0.xcodeproj/xcuserdata/valeedmalik.xcuserdatad/
+Ogre3DSeparateBuildSpace/VinezorsiOS/VinezorsiOS.xcodeproj/xcuserdata/valeedmalik.xcuserdatad/
+Ogre3DSeparateBuildSpace/Vinezors2.0/Vinezors2.0/OgreFramework.cpp
+Ogre3DSeparateBuildSpace/Vinezors2.0/Vinezors2.0/LevelSet.cpp
+Ogre3DSeparateBuildSpace/Vinezors2.0/Vinezors2.0.xcodeproj/project.pbxproj
