--- a/Ogre3DSeparateBuildSpace/Vinezors2.0/Vinezors2.0/resources.cfg
+++ b/Ogre3DSeparateBuildSpace/Vinezors2.0/Vinezors2.0/resources.cfg
@@ -24,6 +24,7 @@ FileSystem=media/materials/textures/CollectionCriteria
 FileSystem=media/materials/textures/Powerups
 FileSystem=media/materials/textures/HealthBar
 FileSystem=media/materials/textures/Test
+FileSystem=media/materials/textures/TutorialSlides
 FileSystem=media/RTShaderLib
 FileSystem=media/RTShaderLib/materials
 FileSystem=media/fonts
