--- a/Ogre3DSeparateBuildSpace/VinezorsiOS/VinezorsiOS/VinezorsiOS-Info.plist
+++ b/Ogre3DSeparateBuildSpace/VinezorsiOS/VinezorsiOS/VinezorsiOS-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Recall the Game</string>
+	<string>Recall Shifter</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
