--- a/Ogre3DSeparateBuildSpace/VinezorsiOS/VinezorsiOS/resources.cfg
+++ b/Ogre3DSeparateBuildSpace/VinezorsiOS/VinezorsiOS/resources.cfg
@@ -13,6 +13,7 @@ FileSystem=media/materials/scripts/Crystals
 FileSystem=media/materials/scripts/Ships
 FileSystem=media/materials/scripts/ExitGate
 FileSystem=media/materials/scripts/Railing
+FileSystem=media/materials/scripts/Powerups
 FileSystem=media/materials/textures
 FileSystem=media/materials/textures/LevelBinding
 FileSystem=media/materials/textures/Barriers
